Sort list of translation entries

--- a/src/main/resources/installers/packr_win.json.dist
+++ b/src/main/resources/installers/packr_win.json.dist
@@ -21,7 +21,7 @@
     "-Dfile.encoding=UTF-8"
   ],
   "resources": [
-    "src/main/resources"
+    "src/main/resources/images"
   ],
   "output": "target/MountaincoreTranslator",
   "verbose":"true"
